--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,8 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
     implementation 'com.google.dagger:dagger:2.13'
     implementation 'io.realm:realm-android:0.84.1'
+
+    //ButterKnif
+    compile "com.jakewharton:butterknife:$rootProject.butterknife"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.butterknife"
 }
