--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     compile 'android.arch.persistence.room:runtime:' + rootProject.archRoomVersion;
     annotationProcessor 'android.arch.persistence.room:compiler:' + rootProject.archRoomVersion;
     // RxJava support for Room
-    implementation "android.arch.persistence.room:rxjava2:1.0.0-alpha5"
+    implementation 'android.arch.persistence.room:rxjava2:'+ rootProject.archRoomVersion;
 
     //Live data
     compile 'android.arch.lifecycle:runtime:'+ rootProject.archRoomVersion;
