--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     //Live data
     compile 'android.arch.lifecycle:runtime:'+ rootProject.archRoomVersion;
     compile 'android.arch.lifecycle:extensions:'+ rootProject.archRoomVersion;
+    implementation project(':minddownloaderlib')
 }
